@@ -1,8 +1,9 @@
-* 2 major enhancements :
+* 3 major enhancements :
   * Thumbnails created for pictures & videos
+  * Support for .zip archives
   * Alias_path is now LetterTokenized
 
-* 1 minor enhancement:
+* 2 minor enhancements:
   * More specs
   * Some aesthetical changes
 
